Fix spacing and buttons in feedback pane

--- a/webpack/stylesheets/comments.scss
+++ b/webpack/stylesheets/comments.scss
@@ -4,14 +4,10 @@
   border-top-style: solid;
   border-top-color: $border-color;
   border-top-width: 3px;
-  border-bottom-style: solid;
-  border-bottom-color: $border-color;
-  border-bottom-width: 3px;
-  background-color: $feedback-bg;
 
   @media all and (min-width: $mobile-width) {
     margin-left: -40px;
-    margin-right: -40px;
+    margin-right: -45px;
     padding-left: 40px;
     padding-right: 40px;
   }
