--- a/webpack/stylesheets/navigation.scss
+++ b/webpack/stylesheets/navigation.scss
@@ -240,14 +240,6 @@ a.global-nav-link {
   background-color: $color-primary;
 }
 
-.feedback-tabs a {
-  padding: 10px 15px;
-  display: block;
-  margin-right: 2px;
-  border-radius: 4px 4px 0 0;
-  text-decoration: none;
-}
-
 .global-nav-block-top {
   font-weight: 600;
   margin-bottom: 3px;
